--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,7 @@ environment:
     CONAN_CHANNEL: "stable"
     VS150COMNTOOLS: "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Community\\Common7\\Tools\\"
     CONAN_UPLOAD: "https://api.bintray.com/conan/luisconanorg/fakeconancenter"
-    CONAN_REMOTES: "https://api.bintray.com/conan/luisconanorg/conan-testing"    
+    CONAN_REMOTES: "https://api.bintray.com/conan/luisconanorg/conan-testing"   
 
     matrix:
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
@@ -24,7 +24,7 @@ environment:
 install:
   - set PATH=%PATH%;%PYTHON%/Scripts/
   - pip.exe install conan --upgrade
-  - pip.exe install conan_package_tools==0.3.7.dev11
+  - pip.exe install conan_package_tools==0.3.7dev12
   - conan user # It creates the conan data directory
 
 test_script:
